src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/Minimal/ValidMinimal.php
<?php

namespace Valid\Minimal;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidMinimal extends PluginBundle
{
}