src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnloadableBundleClass5/InvalidUnloadableBundleClass5.php
<?php

namespace Invalid\UnloadableBundleClass5;

use Claroline\CoreBundle\Library\PluginBundle;

abstract class InvalidUnloadableBundleClass5 extends PluginBundle
{
    /**
     * Invalid because it cannot be instantiated
     */
}